<resources>
    <string name="app_name">BookMyTutor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_myaccount">MY ACCOUNT</string>
    <string name="menu_mybookings">MY BOOKINGS</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_myaccount2">MY ACCOUNT2</string>
    <string name="menu_myrequests">MY REQUESTS</string>
    <string name="menu_logout2">LOGOUT2</string>
    <string name="nav_header_desc2">Navigation header2</string>
    <string name="action_about_us">About us</string>
    <string name="action_contact_us">Contact us</string>
</resources>