<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_myaccount2">

    <fragment
        android:id="@+id/nav_myaccount2"
        android:name="com.example.bookmytutor.ui.myaccount2.MyAccount2Fragment"
        android:label="@string/menu_myaccount2"
        tools:layout="@layout/fragment_myaccount" />

    <fragment
        android:id="@+id/nav_myrequests"
        android:name="com.example.bookmytutor.ui.MyRequests.MyRequestsFragment"
        android:label="@string/menu_myrequests"
        tools:layout="@layout/fragment_myrequests" />

    <fragment
        android:id="@+id/nav_logout2"
        android:name="com.example.bookmytutor.ui.Logout2.LogoutFragment2"
        android:label="@string/menu_logout2"
        tools:layout="@layout/fragment_logout2" />
</navigation>